# esp32-core

./: .Makefile  .Makefile.mk  .Makefile.template  .clang-format  .gitcommitmsg  .gitignore  .travis.yml  .uncrustify.cfg  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  Structure.md  platformio.ini  sdkconfig.defaults
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.github/workflows/: build-test.yml  build.yml  formatting.yml  (+6 more)
.make/: README.md  common.mk  docker.mk  help.mk  idf.mk  part.mk  product.mk  templating.mk
components/: README.md
components/ulp_adc/: CMakeLists.txt
components/ulp_adc/include/: ulp.h
components/ulp_adc/src/: ulp.c
debug/: README.md  esp32.cfg  ft2232hl.cfg
doc/: Makefile.template  esp32_overview.gv
docker/: .gitignore  Makefile  README.md
docs/: CODEOWNERS  Makefile  README.md
include/: log_wifi.h  ls_task.h  message.h  spo2.h  spo2_driver.h  spo2_filter.h  transmission.h  ulp.h  ulp_adc_example.h  wifi.h
lifesensor/: CMakeLists.txt  README.md
lifesensor_ci/: CMakeLists.txt  README.md
lifesensor_test/: README.md
parts/: .template.mk  README.md
parts/esp32-components/.template/: CMakeLists.txt  Kconfig
parts/esp32-components/.template/src/: counter.c
parts/esp32-components/.template/test/: CMakeLists.txt  test.c
parts/esp32-components/spo2/: CMakeLists.txt
parts/esp32-components/spo2/include/: spo2.h  spo2_driver.h  spo2_filter.h
parts/esp32-components/spo2/src/: spo2.c
products/: README.md
src/: log_wifi.c  main.c  message.c  sdkconfig  sdkconfig.h  spo2.c  spo2_driver.c  spo2_filter.c  transmission.c  ulp.c  ulp_adc_example.c  wifi.c
test/: CMakeLists.txt  README.md  sdkconfig.defaults
ulp/: ulp_program.S
(+140 files in other folders)
